src/test/ui/parser/pat-tuple-1.stderr
error: expected pattern, found `,`
  --> $DIR/pat-tuple-1.rs:5:10
   |
LL |         (, ..) => {} //~ ERROR expected pattern, found `,`
   |          ^ expected pattern

error: aborting due to previous error

