src/test/ui/parser/pat-tuple-1.rs
// compile-flags: -Z parse-only

fn main() {
    match 0 {
        (, ..) => {} //~ ERROR expected pattern, found `,`
    }
}
